rename Page one.html to index.html

--- a/Page three.html
+++ b/Page three.html
@@ -14,7 +14,7 @@
 			<h1>My Projects</h1>
 			<nav class = "topnav">
 				<ul>
-					<li><a href="Page one.html">About Me</a></li>
+					<li><a href="index.html">About Me</a></li>
 					<li><a href="Page two.html">My modules</a></li>
 					<li><a href="Page three.html">My Projects</a></li>
 					<li><a href="Page four.html">Ask me a Question</a></li>
