--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			<h1>About Me</h1>
 			<nav class = "topnav">
 				<ul>
-					<li><a href="Page one.html">About Me</a></li>
+					<li><a href="index.html">About Me</a></li>
 					<li><a href="Page two.html">My modules</a></li>
 					<li><a href="Page three.html">My Projects</a></li>
 					<li><a href="Page four.html">Ask me a Question</a></li>
